styles/EventCard.module.css
.eventCard {
  font-family: 'Cabin', sans-serif;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: stretch;
  background-color: #1e1e1e;
  border-radius: clamp(10px, 1vw, 20px);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
  overflow: hidden;
  width: 80%;
  margin: 2vh auto;
  transition: transform 0.2s ease, box-shadow 0.2s ease;
  gap: 2vw;
  min-height: 30vh;
  flex-wrap: wrap;
}

.eventCard:hover {
  transform: translateY(-5px);
  box-shadow: 0 8px 16px rgba(5, 5, 5, 0.15);
}
.buttonWrapper {
  width: fit-content;
}
.imageWrapper {
  flex: 1.2; /* Let the image take a proportional width */
  display: flex;
  align-items: center;
  justify-content: center;
}

.eventImage{
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  object-fit: cover; 
  height: auto;
  width: 100%;
}
.contentWrapper {
  flex: 1.8;
  padding: clamp(1rem, 2vw, 2.5rem);
  text-align: left;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 2vh;
  display: flex; 
  flex-direction: row;
}

.eventTitle {
  font-size: clamp(1.5rem, 2.5vw, 2.5rem);
  font-weight: 700;
  color: #dfdfdf;
  margin: 1vh 0;
  text-align: left;
}

.eventMeta {
  font-size: clamp(0.5rem, 1vw, 1rem);
  color: #aaa;
  padding: 1vh 0;
}

.eventMeta strong {
  font-weight: 600;
  color: #fff;
}

.eventDescription {
  font-size: clamp(0.5rem, 1.2vw, 1rem);
  color: #ffffff;
  line-height: 1.5;
  padding-bottom: clamp(1rem, 2vw, 2.5rem);
}

.textWrapper {
  display: flex;
  flex-direction: column;
  gap: 1vh;
}

@media screen and (min-width: 768px){
  .textWrapper {
    max-width: 50%;
  }
  .contentWrapper {
    padding-bottom: 1vw;
  }
}
@media screen and (max-width: 768px) {
  .eventCard {
    flex-direction: column;
    width: 80%;
    padding-top: 0;
    padding-left: 0; 
    padding-right: 0;
    border-radius: 20px;
    
  }

  .imageWrapper {
    width: 100%;
    margin: 2rem;
    align-self: center;
  }

  .eventImage {
    border-radius: 20px;
    width: 100%;
    height: auto;
    border-bottom-right-radius: 10px; 
    border-bottom-left-radius:10px;
    margin-top: -1.5rem;
  }

  .contentWrapper {
    width: 100%;
    display: flex; 
    flex-direction: column;
  }
  .eventMeta{
    font-size: 0.8rem;
  }
  .eventTitle {
    font-size: 2rem;
    margin-top: -1rem;
  }

  .eventDescription {
    font-size: 0.9rem;
    padding-bottom: 1rem;
  }
}

